8292316: Tests should not rely on specific JAR file names (jpackage)
Backport-of: 45c3e898ed538545921395372fe507e9111401e1